--- a/hyperapp/rc/call_trace.resources.yaml
+++ b/hyperapp/rc/call_trace.resources.yaml
@@ -1,4 +1,5 @@
 import:
+- builtins:web.service
 - legacy_type.builtin:python_module
 
 definitions:
@@ -7,4 +8,5 @@ definitions:
     _type: legacy_type.builtin:python_module
     module_name: call_trace
     file_name: call_trace.dyn.py
-    import_list: []
+    import_list:
+      services.web: builtins:web.service
