--- a/hyperapp/rc/unit.resources.yaml
+++ b/hyperapp/rc/unit.resources.yaml
@@ -15,6 +15,7 @@ import:
 - rc.import_driver:import_driver.module
 - rc.scaffolds:scaffolds.module
 - rc.test_driver:test_driver.module
+- rc.ui_ctl:ui_ctl.module
 
 definitions:
 
@@ -39,3 +40,4 @@ definitions:
       code.import_driver: rc.import_driver:import_driver.module
       code.scaffolds: rc.scaffolds:scaffolds.module
       code.test_driver: rc.test_driver:test_driver.module
+      code.ui_ctl: rc.ui_ctl:ui_ctl.module
