--- a/hyperapp/ui/qt/menu_bar.resources.yaml
+++ b/hyperapp/ui/qt/menu_bar.resources.yaml
@@ -4,7 +4,6 @@ import:
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.menu_bar:layout
-- legacy_type.menu_bar:state
 - legacy_type.ui:ui_ctl
 - ui.ui_ctl_registry:ui_ctl_creg.service
 associations:
@@ -31,6 +30,4 @@ definitions:
     _type: legacy_type.builtin:python_module
     module_name: menu_bar
     file_name: menu_bar.dyn.py
-    import_list:
-      htypes.menu_bar.layout: legacy_type.menu_bar:layout
-      htypes.menu_bar.state: legacy_type.menu_bar:state
+    import_list: {}
