--- a/hyperapp/rc/unit.resources.yaml
+++ b/hyperapp/rc/unit.resources.yaml
@@ -3,12 +3,14 @@ import:
 - builtins:resource_module_factory.service
 - builtins:web.service
 - legacy_type.attr_constructors:service
+- legacy_type.builtin:import_rec
 - legacy_type.builtin:python_module
 - legacy_type.import_discoverer:using_incomplete_object
 - legacy_type.inspect:fn_attr
 - legacy_type.inspect:import_recorder
 - legacy_type.rc:source_dep
 - legacy_type.rc:module_deps
+- legacy_type.rc:phony
 - rc.call_driver:call_driver.module
 - rc.call_trace:call_trace.module
 - rc.dep:dep.module
@@ -25,12 +27,14 @@ definitions:
     file_name: unit.dyn.py
     import_list:
       htypes.attr_constructors.service: legacy_type.attr_constructors:service
+      htypes.builtin.import_rec: legacy_type.builtin:import_rec
       htypes.builtin.python_module: legacy_type.builtin:python_module
       htypes.import_discoverer.using_incomplete_object: legacy_type.import_discoverer:using_incomplete_object
       htypes.inspect.fn_attr: legacy_type.inspect:fn_attr
       htypes.inspect.import_recorder: legacy_type.inspect:import_recorder
       htypes.rc.source_dep: legacy_type.rc:source_dep
       htypes.rc.module_deps: legacy_type.rc:module_deps
+      htypes.rc.phony: legacy_type.rc:phony
       services.mosaic: builtins:mosaic.service
       services.resource_module_factory: builtins:resource_module_factory.service
       services.web: builtins:web.service
