--- a/hyperapp/rc/ui_command_ctr.tests.resources.yaml
+++ b/hyperapp/rc/ui_command_ctr.tests.resources.yaml
@@ -6,11 +6,11 @@ import:
 - builtins:pyobj_creg.service
 - common.mark:mark.service
 - legacy_type.builtin:python_module
-- legacy_type.rc:phony
+- legacy_type.phony:phony
 associations: []
 definitions:
   phony:
-    _type: legacy_type.rc:phony
+    _type: legacy_type.phony:phony
   ui_command_ctr.tests.module:
     _type: legacy_type.builtin:python_module
     module_name: ui_command_ctr.tests
