--- a/hyperapp/resource/data_to_res.tests.resources.yaml
+++ b/hyperapp/resource/data_to_res.tests.resources.yaml
@@ -2,7 +2,7 @@
 
 import:
 - legacy_type.builtin:python_module
-- legacy_type.rc:phony
+- legacy_type.phony:phony
 associations: []
 definitions:
   data_to_res.tests.module:
@@ -13,4 +13,4 @@ definitions:
       tested.code.data_to_res: phony
       tested.services.data_to_res: phony
   phony:
-    _type: legacy_type.rc:phony
+    _type: legacy_type.phony:phony
