--- a/hyperapp/resource/fn_to_res.tests.resources.yaml
+++ b/hyperapp/resource/fn_to_res.tests.resources.yaml
@@ -3,7 +3,7 @@
 import:
 - common.mark:mark.service
 - legacy_type.builtin:python_module
-- legacy_type.rc:phony
+- legacy_type.phony:phony
 associations: []
 definitions:
   fn_to_res.tests.module:
@@ -15,4 +15,4 @@ definitions:
       tested.code.fn_to_res: phony
       tested.services.fn_to_ref: phony
   phony:
-    _type: legacy_type.rc:phony
+    _type: legacy_type.phony:phony
