--- a/hyperapp/rpc/rpc_call.tests.resources.yaml
+++ b/hyperapp/rpc/rpc_call.tests.resources.yaml
@@ -4,12 +4,12 @@ import:
 - builtins:mosaic.service
 - common.mark:mark.service
 - legacy_type.builtin:python_module
-- legacy_type.rc:phony
+- legacy_type.phony:phony
 - transport.rsa_identity:generate_rsa_identity.service
 associations: []
 definitions:
   phony:
-    _type: legacy_type.rc:phony
+    _type: legacy_type.phony:phony
   rpc_call.tests.module:
     _type: legacy_type.builtin:python_module
     module_name: rpc_call.tests
