--- a/hyperapp/rpc/rpc_endpoint.tests.resources.yaml
+++ b/hyperapp/rpc/rpc_endpoint.tests.resources.yaml
@@ -5,13 +5,13 @@ import:
 - builtins:pyobj_creg.service
 - common.mark:mark.service
 - legacy_type.builtin:python_module
-- legacy_type.rc:phony
+- legacy_type.phony:phony
 - transport.endpoint:endpoint.module
 - transport.rsa_identity:generate_rsa_identity.service
 associations: []
 definitions:
   phony:
-    _type: legacy_type.rc:phony
+    _type: legacy_type.phony:phony
   rpc_endpoint.tests.module:
     _type: legacy_type.builtin:python_module
     module_name: rpc_endpoint.tests
