--- a/hyperapp/subprocess/subprocess.tests.resources.yaml
+++ b/hyperapp/subprocess/subprocess.tests.resources.yaml
@@ -2,13 +2,13 @@
 
 import:
 - legacy_type.builtin:python_module
-- legacy_type.rc:phony
+- legacy_type.phony:phony
 - resource.partial_ref:partial_ref.service
 - subprocess.subprocess_tests_aux:subprocess_tests_aux.module
 associations: []
 definitions:
   phony:
-    _type: legacy_type.rc:phony
+    _type: legacy_type.phony:phony
   subprocess.tests.module:
     _type: legacy_type.builtin:python_module
     module_name: subprocess.tests
