--- a/hyperapp/subprocess/subprocess_rpc_server.tests.resources.yaml
+++ b/hyperapp/subprocess/subprocess_rpc_server.tests.resources.yaml
@@ -2,7 +2,7 @@
 
 import:
 - legacy_type.builtin:python_module
-- legacy_type.rc:phony
+- legacy_type.phony:phony
 - resource.partial_ref:partial_ref.service
 - rpc.rpc_endpoint:rpc_endpoint_factory.service
 - subprocess.subprocess_rpc_server_tests_aux:subprocess_rpc_server_tests_aux.module
@@ -11,7 +11,7 @@ import:
 associations: []
 definitions:
   phony:
-    _type: legacy_type.rc:phony
+    _type: legacy_type.phony:phony
   subprocess_rpc_server.tests.module:
     _type: legacy_type.builtin:python_module
     module_name: subprocess_rpc_server.tests
