--- a/hyperapp/ui/qt/menu_bar.tests.resources.yaml
+++ b/hyperapp/ui/qt/menu_bar.tests.resources.yaml
@@ -3,7 +3,7 @@
 import:
 - common.context:context.module
 - legacy_type.builtin:python_module
-- legacy_type.rc:phony
+- legacy_type.phony:phony
 associations: []
 definitions:
   menu_bar.tests.module:
@@ -14,4 +14,4 @@ definitions:
       code.context: common.context:context.module
       tested.code.menu_bar: phony
   phony:
-    _type: legacy_type.rc:phony
+    _type: legacy_type.phony:phony
