--- a/hyperapp/ui/qt/tabs.tests.resources.yaml
+++ b/hyperapp/ui/qt/tabs.tests.resources.yaml
@@ -4,11 +4,11 @@ import:
 - builtins:mosaic.service
 - common.context:context.module
 - legacy_type.builtin:python_module
-- legacy_type.rc:phony
+- legacy_type.phony:phony
 associations: []
 definitions:
   phony:
-    _type: legacy_type.rc:phony
+    _type: legacy_type.phony:phony
   tabs.tests.module:
     _type: legacy_type.builtin:python_module
     module_name: tabs.tests
