--- a/hyperapp/ui/ui_command.tests.resources.yaml
+++ b/hyperapp/ui/ui_command.tests.resources.yaml
@@ -5,12 +5,12 @@ import:
 - builtins:pyobj_creg.service
 - common.mark:mark.service
 - legacy_type.builtin:python_module
-- legacy_type.rc:phony
+- legacy_type.phony:phony
 - resource.fn_to_res:fn_to_res.service
 associations: []
 definitions:
   phony:
-    _type: legacy_type.rc:phony
+    _type: legacy_type.phony:phony
   ui_command.tests.module:
     _type: legacy_type.builtin:python_module
     module_name: ui_command.tests
