--- a/hyperapp/rc/test_driver.resources.yaml
+++ b/hyperapp/rc/test_driver.resources.yaml
@@ -1,6 +1,8 @@
 import:
+- builtins:association_reg.service
 - builtins:mosaic.service
 - builtins:pyobj_creg.service
+- builtins:web.service
 - legacy_type.builtin:python_module
 - legacy_type.inspect:object_type_info
 - rc.driver_recorders:driver_recorders.module
@@ -15,8 +17,10 @@ definitions:
     file_name: test_driver.dyn.py
     import_list:
       htypes.inspect.object_type_info: legacy_type.inspect:object_type_info
+      services.association_reg: builtins:association_reg.service
       services.mosaic: builtins:mosaic.service
       services.pyobj_creg: builtins:pyobj_creg.service
+      services.web: builtins:web.service
       code.driver_recorders: rc.driver_recorders:driver_recorders.module
       code.tracer: rc.tracer:tracer.module
       code.tested_imports: rc.tested_imports:tested_imports.module
