--- a/hyperapp/client/client.resources.yaml
+++ b/hyperapp/client/client.resources.yaml
@@ -11,6 +11,9 @@ import:
 - legacy_type.menu_bar:state
 - legacy_type.tabs:layout
 - legacy_type.tabs:state
+- legacy_type.tabs:tab
+- legacy_type.text:layout
+- legacy_type.text:state
 - legacy_type.window:layout
 - legacy_type.window:pos
 - legacy_type.window:size
@@ -31,6 +34,9 @@ definitions:
       htypes.menu_bar.state: legacy_type.menu_bar:state
       htypes.tabs.layout: legacy_type.tabs:layout
       htypes.tabs.state: legacy_type.tabs:state
+      htypes.tabs.tab: legacy_type.tabs:tab
+      htypes.text.layout: legacy_type.text:layout
+      htypes.text.state: legacy_type.text:state
       htypes.window.layout: legacy_type.window:layout
       htypes.window.pos: legacy_type.window:pos
       htypes.window.size: legacy_type.window:size
