--- a/hyperapp/ui/qt/text.resources.yaml
+++ b/hyperapp/ui/qt/text.resources.yaml
@@ -3,29 +3,48 @@
 import:
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
-- legacy_type.text:layout
+- legacy_type.text:edit_layout
 - legacy_type.text:state
+- legacy_type.text:view_layout
 - legacy_type.ui:ui_ctl
 - ui.ui_ctl_registry:ui_ctl_creg.service
 associations:
 - bases:
-  - legacy_type.text:layout
+  - legacy_type.text:edit_layout
   key:
   - ui.ui_ctl_registry:ui_ctl_creg.service
-  - legacy_type.text:layout
-  value: TextCtl.from_piece.ctl
+  - legacy_type.text:edit_layout
+  value: EditTextCtl.from_piece.ctl
+- bases:
+  - legacy_type.text:view_layout
+  key:
+  - ui.ui_ctl_registry:ui_ctl_creg.service
+  - legacy_type.text:view_layout
+  value: ViewTextCtl.from_piece.ctl
 definitions:
-  TextCtl:
+  EditTextCtl:
     _type: legacy_type.builtin:attribute
     object: text.module
-    attr_name: TextCtl
-  TextCtl.from_piece:
+    attr_name: EditTextCtl
+  EditTextCtl.from_piece:
     _type: legacy_type.builtin:attribute
-    object: TextCtl
+    object: EditTextCtl
     attr_name: from_piece
-  TextCtl.from_piece.ctl:
+  EditTextCtl.from_piece.ctl:
     _type: legacy_type.ui:ui_ctl
-    ctr_fn: TextCtl.from_piece
+    ctr_fn: EditTextCtl.from_piece
+    command_methods: []
+  ViewTextCtl:
+    _type: legacy_type.builtin:attribute
+    object: text.module
+    attr_name: ViewTextCtl
+  ViewTextCtl.from_piece:
+    _type: legacy_type.builtin:attribute
+    object: ViewTextCtl
+    attr_name: from_piece
+  ViewTextCtl.from_piece.ctl:
+    _type: legacy_type.ui:ui_ctl
+    ctr_fn: ViewTextCtl.from_piece
     command_methods: []
   text.module:
     _type: legacy_type.builtin:python_module
