Add command hub; nest tabs

--- a/hyperapp/ui/qt/text.resources.yaml
+++ b/hyperapp/ui/qt/text.resources.yaml
@@ -7,6 +7,7 @@ import:
 - legacy_type.text:state
 - legacy_type.text:view_layout
 - legacy_type.ui:ui_ctl
+- ui.ui_command:ui_command_factory.service
 - ui.ui_ctl_registry:ui_ctl_creg.service
 associations:
 - bases:
@@ -52,3 +53,4 @@ definitions:
     file_name: text.dyn.py
     import_list:
       htypes.text.state: legacy_type.text:state
+      services.ui_command_factory: ui.ui_command:ui_command_factory.service
