--- a/hyperapp/ui/qt/menu_bar.tests.resources.yaml
+++ b/hyperapp/ui/qt/menu_bar.tests.resources.yaml
@@ -12,6 +12,7 @@ definitions:
     file_name: menu_bar.tests.dyn.py
     import_list:
       code.context: common.context:context.module
+      tested.code.command_hub: phony
       tested.code.menu_bar: phony
   phony:
     _type: legacy_type.phony:phony
