--- a/hyperapp/ui/qt/tabs.tests.resources.yaml
+++ b/hyperapp/ui/qt/tabs.tests.resources.yaml
@@ -5,6 +5,7 @@ import:
 - common.context:context.module
 - legacy_type.builtin:python_module
 - legacy_type.phony:phony
+- ui.command_hub:command_hub.module
 associations: []
 definitions:
   phony:
@@ -14,6 +15,7 @@ definitions:
     module_name: tabs.tests
     file_name: tabs.tests.dyn.py
     import_list:
+      code.command_hub: ui.command_hub:command_hub.module
       code.context: common.context:context.module
       services.mosaic: builtins:mosaic.service
       tested.code.tabs: phony
