--- a/hyperapp/ui/qt/tabs.tests.resources.yaml
+++ b/hyperapp/ui/qt/tabs.tests.resources.yaml
@@ -2,6 +2,7 @@
 
 import:
 - builtins:mosaic.service
+- builtins:web.service
 - common.context:context.module
 - legacy_type.builtin:python_module
 - legacy_type.phony:phony
@@ -18,4 +19,5 @@ definitions:
       code.command_hub: ui.command_hub:command_hub.module
       code.context: common.context:context.module
       services.mosaic: builtins:mosaic.service
+      services.web: builtins:web.service
       tested.code.tabs: phony
