--- a/hyperapp/client/client.resources.yaml
+++ b/hyperapp/client/client.resources.yaml
@@ -9,6 +9,8 @@ import:
 - legacy_type.command_pane:command_pane
 - legacy_type.menu_bar:layout
 - legacy_type.menu_bar:state
+- legacy_type.navigator:layout
+- legacy_type.navigator:state
 - legacy_type.tabs:layout
 - legacy_type.tabs:state
 - legacy_type.tabs:tab
@@ -32,6 +34,8 @@ definitions:
       htypes.command_pane.command_pane: legacy_type.command_pane:command_pane
       htypes.menu_bar.layout: legacy_type.menu_bar:layout
       htypes.menu_bar.state: legacy_type.menu_bar:state
+      htypes.navigator.layout: legacy_type.navigator:layout
+      htypes.navigator.state: legacy_type.navigator:state
       htypes.tabs.layout: legacy_type.tabs:layout
       htypes.tabs.state: legacy_type.tabs:state
       htypes.tabs.tab: legacy_type.tabs:tab
