--- a/hyperapp/ui/qt/navigator.resources.yaml
+++ b/hyperapp/ui/qt/navigator.resources.yaml
@@ -9,6 +9,7 @@ import:
 - legacy_type.navigator:state
 - legacy_type.ui:ui_ctl
 - ui.ui_ctl_registry:ui_ctl_creg.service
+- ui.visualizer:visualizer.service
 associations:
 - bases:
   - legacy_type.navigator:layout
@@ -37,4 +38,5 @@ definitions:
       htypes.navigator.state: legacy_type.navigator:state
       services.mosaic: builtins:mosaic.service
       services.ui_ctl_creg: ui.ui_ctl_registry:ui_ctl_creg.service
+      services.visualizer: ui.visualizer:visualizer.service
       services.web: builtins:web.service
