--- a/hyperapp/ui/navigator.resources.yaml
+++ b/hyperapp/ui/navigator.resources.yaml
@@ -5,7 +5,9 @@ import:
 - builtins:web.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
+- legacy_type.navigator:go_back_diff
 - legacy_type.navigator:layout
+- legacy_type.navigator:open_new_diff
 - legacy_type.navigator:state
 - legacy_type.ui:ui_ctl
 - ui.ui_ctl_registry:ui_ctl_creg.service
@@ -35,6 +37,9 @@ definitions:
     module_name: navigator
     file_name: navigator.dyn.py
     import_list:
+      htypes.navigator.go_back_diff: legacy_type.navigator:go_back_diff
+      htypes.navigator.layout: legacy_type.navigator:layout
+      htypes.navigator.open_new_diff: legacy_type.navigator:open_new_diff
       htypes.navigator.state: legacy_type.navigator:state
       services.mosaic: builtins:mosaic.service
       services.ui_ctl_creg: ui.ui_ctl_registry:ui_ctl_creg.service
