--- a/hyperapp/ui/navigator.resources.yaml
+++ b/hyperapp/ui/navigator.resources.yaml
@@ -6,6 +6,7 @@ import:
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.navigator:go_back_diff
+- legacy_type.navigator:go_forward_diff
 - legacy_type.navigator:layout
 - legacy_type.navigator:open_new_diff
 - legacy_type.navigator:state
@@ -38,6 +39,7 @@ definitions:
     file_name: navigator.dyn.py
     import_list:
       htypes.navigator.go_back_diff: legacy_type.navigator:go_back_diff
+      htypes.navigator.go_forward_diff: legacy_type.navigator:go_forward_diff
       htypes.navigator.layout: legacy_type.navigator:layout
       htypes.navigator.open_new_diff: legacy_type.navigator:open_new_diff
       htypes.navigator.state: legacy_type.navigator:state
