--- a/hyperapp/ui/visualizer.resources.yaml
+++ b/hyperapp/ui/visualizer.resources.yaml
@@ -2,10 +2,13 @@
 
 import:
 - builtins:mosaic.service
+- builtins:types.service
 - common.mark:mark.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:call
 - legacy_type.builtin:python_module
+- legacy_type.list:layout
+- legacy_type.list_adapter:static_list_adapter
 - legacy_type.str_adapter:static_str_adapter
 - legacy_type.text:edit_layout
 associations: []
@@ -19,10 +22,13 @@ definitions:
     module_name: visualizer
     file_name: visualizer.dyn.py
     import_list:
+      htypes.list.layout: legacy_type.list:layout
+      htypes.list_adapter.static_list_adapter: legacy_type.list_adapter:static_list_adapter
       htypes.str_adapter.static_str_adapter: legacy_type.str_adapter:static_str_adapter
       htypes.text.edit_layout: legacy_type.text:edit_layout
       services.mark: common.mark:mark.service
       services.mosaic: builtins:mosaic.service
+      services.types: builtins:types.service
   visualizer.service:
     _type: legacy_type.builtin:call
     function: visualizer
