--- a/hyperapp/ui/navigator.resources.yaml
+++ b/hyperapp/ui/navigator.resources.yaml
@@ -11,6 +11,7 @@ import:
 - legacy_type.navigator:open_new_diff
 - legacy_type.navigator:state
 - legacy_type.sample_list:item
+- legacy_type.sample_list:sample_list
 - legacy_type.ui:ui_ctl
 - ui.ui_ctl_registry:ui_ctl_creg.service
 - ui.visualizer:visualizer.service
@@ -45,6 +46,7 @@ definitions:
       htypes.navigator.open_new_diff: legacy_type.navigator:open_new_diff
       htypes.navigator.state: legacy_type.navigator:state
       htypes.sample_list.item: legacy_type.sample_list:item
+      htypes.sample_list.sample_list: legacy_type.sample_list:sample_list
       services.mosaic: builtins:mosaic.service
       services.ui_ctl_creg: ui.ui_ctl_registry:ui_ctl_creg.service
       services.visualizer: ui.visualizer:visualizer.service
