--- a/hyperapp/ui/visualizer.resources.yaml
+++ b/hyperapp/ui/visualizer.resources.yaml
@@ -8,7 +8,9 @@ import:
 - legacy_type.builtin:call
 - legacy_type.builtin:python_module
 - legacy_type.list:layout
+- legacy_type.list_adapter:fn_list_adapter
 - legacy_type.list_adapter:static_list_adapter
+- legacy_type.sample_list:sample_list
 - legacy_type.str_adapter:static_str_adapter
 - legacy_type.text:edit_layout
 associations: []
@@ -23,7 +25,9 @@ definitions:
     file_name: visualizer.dyn.py
     import_list:
       htypes.list.layout: legacy_type.list:layout
+      htypes.list_adapter.fn_list_adapter: legacy_type.list_adapter:fn_list_adapter
       htypes.list_adapter.static_list_adapter: legacy_type.list_adapter:static_list_adapter
+      htypes.sample_list.sample_list: legacy_type.sample_list:sample_list
       htypes.str_adapter.static_str_adapter: legacy_type.str_adapter:static_str_adapter
       htypes.text.edit_layout: legacy_type.text:edit_layout
       services.mark: common.mark:mark.service
