--- a/hyperapp/rc/tracer.resources.yaml
+++ b/hyperapp/rc/tracer.resources.yaml
@@ -5,12 +5,11 @@ import:
   - legacy_type.inspect:call_param
   - legacy_type.inspect:call_trace
   - legacy_type.inspect:type_name
-  - legacy_type.inspect:item_element
   - legacy_type.inspect:none_t
   - legacy_type.inspect:primitive_t
   - legacy_type.inspect:object_t
   - legacy_type.inspect:record_t
-  - legacy_type.inspect:list_t
+  - legacy_type.inspect:record_list_t
   - legacy_type.inspect:empty_list_t
   - legacy_type.inspect:coroutine_t
   - legacy_type.builtin:python_module
@@ -25,12 +24,11 @@ definitions:
       htypes.inspect.call_param: legacy_type.inspect:call_param
       htypes.inspect.call_trace: legacy_type.inspect:call_trace
       htypes.inspect.type_name: legacy_type.inspect:type_name
-      htypes.inspect.item_element: legacy_type.inspect:item_element
       htypes.inspect.none_t: legacy_type.inspect:none_t
       htypes.inspect.primitive_t: legacy_type.inspect:primitive_t
       htypes.inspect.object_t: legacy_type.inspect:object_t
       htypes.inspect.record_t: legacy_type.inspect:record_t
-      htypes.inspect.list_t: legacy_type.inspect:list_t
+      htypes.inspect.record_list_t: legacy_type.inspect:record_list_t
       htypes.inspect.empty_list_t: legacy_type.inspect:empty_list_t
       htypes.inspect.coroutine_t: legacy_type.inspect:coroutine_t
       services.hyperapp_dir: builtins:hyperapp_dir.service
