--- a/hyperapp/rc/tracer.resources.yaml
+++ b/hyperapp/rc/tracer.resources.yaml
@@ -5,13 +5,9 @@ import:
   - legacy_type.inspect:call_param
   - legacy_type.inspect:call_trace
   - legacy_type.inspect:type_name
-  - legacy_type.inspect:none_t
-  - legacy_type.inspect:primitive_t
   - legacy_type.inspect:object_t
-  - legacy_type.inspect:record_t
-  - legacy_type.inspect:record_list_t
-  - legacy_type.inspect:empty_list_t
   - legacy_type.inspect:coroutine_t
+  - legacy_type.inspect:data_t
   - legacy_type.builtin:python_module
 
 definitions:
@@ -24,13 +20,9 @@ definitions:
       htypes.inspect.call_param: legacy_type.inspect:call_param
       htypes.inspect.call_trace: legacy_type.inspect:call_trace
       htypes.inspect.type_name: legacy_type.inspect:type_name
-      htypes.inspect.none_t: legacy_type.inspect:none_t
-      htypes.inspect.primitive_t: legacy_type.inspect:primitive_t
       htypes.inspect.object_t: legacy_type.inspect:object_t
-      htypes.inspect.record_t: legacy_type.inspect:record_t
-      htypes.inspect.record_list_t: legacy_type.inspect:record_list_t
-      htypes.inspect.empty_list_t: legacy_type.inspect:empty_list_t
       htypes.inspect.coroutine_t: legacy_type.inspect:coroutine_t
+      htypes.inspect.data_t: legacy_type.inspect:data_t
       services.hyperapp_dir: builtins:hyperapp_dir.service
       services.mosaic: builtins:mosaic.service
       services.types: builtins:types.service
