--- a/hyperapp/rc/ui_ctl.resources.yaml
+++ b/hyperapp/rc/ui_ctl.resources.yaml
@@ -1,10 +1,11 @@
 import:
 - builtins:mosaic.service
 - builtins:pyobj_creg.service
+- builtins:types.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:legacy_type
 - legacy_type.builtin:python_module
-- legacy_type.inspect:record_t
+- legacy_type.inspect:data_t
 - legacy_type.ui:ui_ctl
 - ui.ui_ctl_registry:ui_ctl_creg.service
 - ui.ui_adapter_creg:ui_adapter_creg.service
@@ -17,9 +18,10 @@ definitions:
     import_list:
       htypes.builtin.attribute: legacy_type.builtin:attribute
       htypes.builtin.legacy_type: legacy_type.builtin:legacy_type
-      htypes.inspect.record_t: legacy_type.inspect:record_t
+      htypes.inspect.data_t: legacy_type.inspect:data_t
       htypes.ui.ui_ctl: legacy_type.ui:ui_ctl
       services.mosaic: builtins:mosaic.service
       services.pyobj_creg: builtins:pyobj_creg.service
+      services.types: builtins:types.service
       services.ui_ctl_creg: ui.ui_ctl_registry:ui_ctl_creg.service
       services.ui_adapter_creg: ui.ui_adapter_creg:ui_adapter_creg.service
