--- a/hyperapp/rc/ui_ctl.resources.yaml
+++ b/hyperapp/rc/ui_ctl.resources.yaml
@@ -3,9 +3,14 @@ import:
 - builtins:pyobj_creg.service
 - builtins:types.service
 - legacy_type.builtin:attribute
+- legacy_type.builtin:call
 - legacy_type.builtin:legacy_type
 - legacy_type.builtin:python_module
 - legacy_type.inspect:data_t
+- legacy_type.ui:fn_impl
+- legacy_type.ui:list_ui_t
+- legacy_type.ui:model
+- legacy_type.ui:model_d
 - legacy_type.ui:ui_ctl
 - ui.ui_ctl_registry:ui_ctl_creg.service
 - ui.ui_adapter_creg:ui_adapter_creg.service
@@ -17,8 +22,13 @@ definitions:
     file_name: ui_ctl.dyn.py
     import_list:
       htypes.builtin.attribute: legacy_type.builtin:attribute
+      htypes.builtin.call: legacy_type.builtin:call
       htypes.builtin.legacy_type: legacy_type.builtin:legacy_type
       htypes.inspect.data_t: legacy_type.inspect:data_t
+      htypes.ui.list_ui_t: legacy_type.ui:list_ui_t
+      htypes.ui.fn_impl: legacy_type.ui:fn_impl
+      htypes.ui.model: legacy_type.ui:model
+      htypes.ui.model_d: legacy_type.ui:model_d
       htypes.ui.ui_ctl: legacy_type.ui:ui_ctl
       services.mosaic: builtins:mosaic.service
       services.pyobj_creg: builtins:pyobj_creg.service
