--- a/hyperapp/ui/sample_list.resources.yaml
+++ b/hyperapp/ui/sample_list.resources.yaml
@@ -1,13 +1,43 @@
 # Automatically generated file. Do not edit.
 
 import:
+- legacy_type.builtin:attribute
+- legacy_type.builtin:call
 - legacy_type.builtin:python_module
 - legacy_type.sample_list:item
-associations: []
+- legacy_type.sample_list:sample_list
+- legacy_type.ui:fn_impl
+- legacy_type.ui:list_ui_t
+- legacy_type.ui:model
+- legacy_type.ui:model_d
+associations:
+- bases:
+  - legacy_type.sample_list:sample_list
+  key:
+  - model_d
+  - legacy_type.sample_list:sample_list
+  value: sample_list.model
 definitions:
+  model_d:
+    _type: legacy_type.builtin:call
+    function: legacy_type.ui:model_d
+  sample_list:
+    _type: legacy_type.builtin:attribute
+    object: sample_list.module
+    attr_name: sample_list
+  sample_list.impl:
+    _type: legacy_type.ui:fn_impl
+    function: sample_list
+  sample_list.model:
+    _type: legacy_type.ui:model
+    ui_t: sample_list.ui_t
+    impl: sample_list.impl
   sample_list.module:
     _type: legacy_type.builtin:python_module
     module_name: sample_list
     file_name: sample_list.dyn.py
     import_list:
       htypes.sample_list.item: legacy_type.sample_list:item
+  sample_list.ui_t:
+    _type: legacy_type.ui:list_ui_t
+    element_t: legacy_type.sample_list:item
