--- a/hyperapp/ui/qt/list_adapter.resources.yaml
+++ b/hyperapp/ui/qt/list_adapter.resources.yaml
@@ -2,13 +2,13 @@
 
 import:
 - builtins:mosaic.service
+- builtins:pyobj_creg.service
 - builtins:types.service
 - builtins:web.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.list_adapter:fn_list_adapter
 - legacy_type.list_adapter:static_list_adapter
-- ui.sample_list:sample_list.module
 - ui.ui_adapter_creg:ui_adapter_creg.service
 associations:
 - bases:
@@ -47,7 +47,7 @@ definitions:
     module_name: list_adapter
     file_name: list_adapter.dyn.py
     import_list:
-      code.sample_list: ui.sample_list:sample_list.module
       services.mosaic: builtins:mosaic.service
+      services.pyobj_creg: builtins:pyobj_creg.service
       services.types: builtins:types.service
       services.web: builtins:web.service
