--- a/hyperapp/rc/ui_ctl.resources.yaml
+++ b/hyperapp/rc/ui_ctl.resources.yaml
@@ -8,6 +8,8 @@ import:
 - legacy_type.builtin:python_module
 - legacy_type.inspect:data_t
 - legacy_type.ui:fn_impl
+- legacy_type.ui:global_model_command
+- legacy_type.ui:global_model_command_d
 - legacy_type.ui:list_ui_t
 - legacy_type.ui:model
 - legacy_type.ui:model_d
@@ -27,6 +29,8 @@ definitions:
       htypes.inspect.data_t: legacy_type.inspect:data_t
       htypes.ui.list_ui_t: legacy_type.ui:list_ui_t
       htypes.ui.fn_impl: legacy_type.ui:fn_impl
+      htypes.ui.global_model_command: legacy_type.ui:global_model_command
+      htypes.ui.global_model_command_d: legacy_type.ui:global_model_command_d
       htypes.ui.model: legacy_type.ui:model
       htypes.ui.model_d: legacy_type.ui:model_d
       htypes.ui.ui_ctl: legacy_type.ui:ui_ctl
