--- a/hyperapp/ui/navigator.resources.yaml
+++ b/hyperapp/ui/navigator.resources.yaml
@@ -4,6 +4,7 @@ import:
 - builtins:mosaic.service
 - builtins:web.service
 - legacy_type.builtin:attribute
+- legacy_type.builtin:call
 - legacy_type.builtin:python_module
 - legacy_type.navigator:go_back_diff
 - legacy_type.navigator:go_forward_diff
@@ -12,10 +13,16 @@ import:
 - legacy_type.navigator:state
 - legacy_type.sample_list:item
 - legacy_type.sample_list:sample_list
+- legacy_type.ui:global_model_command
+- legacy_type.ui:global_model_command_d
 - legacy_type.ui:ui_ctl
 - ui.ui_ctl_registry:ui_ctl_creg.service
 - ui.visualizer:visualizer.service
 associations:
+- bases:
+  - global_model_command_d
+  key: global_model_command_d
+  value: open_sample_fn_list.command
 - bases:
   - legacy_type.navigator:layout
   key:
@@ -35,6 +42,9 @@ definitions:
     _type: legacy_type.ui:ui_ctl
     ctr_fn: NavigatorCtl.from_piece
     command_methods: []
+  global_model_command_d:
+    _type: legacy_type.builtin:call
+    function: legacy_type.ui:global_model_command_d
   navigator.module:
     _type: legacy_type.builtin:python_module
     module_name: navigator
@@ -51,3 +61,10 @@ definitions:
       services.ui_ctl_creg: ui.ui_ctl_registry:ui_ctl_creg.service
       services.visualizer: ui.visualizer:visualizer.service
       services.web: builtins:web.service
+  open_sample_fn_list:
+    _type: legacy_type.builtin:attribute
+    object: navigator.module
+    attr_name: open_sample_fn_list
+  open_sample_fn_list.command:
+    _type: legacy_type.ui:global_model_command
+    function: open_sample_fn_list
