--- a/hyperapp/rc/code_registry_ctr.resources.yaml
+++ b/hyperapp/rc/code_registry_ctr.resources.yaml
@@ -3,17 +3,17 @@ import:
 - builtins:mosaic.service
 - builtins:web.service
 - legacy_type.builtin:attribute
-- legacy_type.code_registry:constructor
+- legacy_type.builtin:code_registry_ctr
 - legacy_type.builtin:python_module
 
 associations:
 
 - bases:
   - resource.constructor_creg:constructor_creg.service
-  - legacy_type.code_registry:constructor
+  - legacy_type.builtin:code_registry_ctr
   key:
   - resource.constructor_creg:constructor_creg.service
-  - legacy_type.code_registry:constructor
+  - legacy_type.builtin:code_registry_ctr
   value: construct
 
 definitions:
