--- a/hyperapp/rpc/rpc_endpoint.resources.yaml
+++ b/hyperapp/rpc/rpc_endpoint.resources.yaml
@@ -1,11 +1,11 @@
 # Automatically generated file. Do not edit.
 
 import:
+- builtins:code_registry_ctr.service
 - builtins:mosaic.service
 - builtins:on_stop.service
 - builtins:pyobj_creg.service
 - builtins:types.service
-- builtins:web.service
 - common.mark:mark.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:call
@@ -27,6 +27,7 @@ definitions:
       htypes.rpc.request: legacy_type.rpc:request
       htypes.rpc.response: legacy_type.rpc:response
       htypes.rpc.server_error: legacy_type.rpc:server_error
+      services.code_registry_ctr: builtins:code_registry_ctr.service
       services.mark: common.mark:mark.service
       services.mosaic: builtins:mosaic.service
       services.on_stop: builtins:on_stop.service
@@ -34,7 +35,6 @@ definitions:
       services.pyobj_creg: builtins:pyobj_creg.service
       services.transport: transport.transport:transport.service
       services.types: builtins:types.service
-      services.web: builtins:web.service
   rpc_endpoint_factory:
     _type: legacy_type.builtin:attribute
     object: rpc_endpoint.module
