--- a/hyperapp/ui/model_command.resources.yaml
+++ b/hyperapp/ui/model_command.resources.yaml
@@ -5,16 +5,16 @@ import:
 - builtins:pyobj_creg.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
-- legacy_type.ui:global_model_command
 - legacy_type.ui:global_model_command_d
+- legacy_type.ui:model_command
 - resource.data_to_res:data_to_res.service
 associations:
 - bases:
   - builtins:pyobj_creg.service
-  - legacy_type.ui:global_model_command
+  - legacy_type.ui:model_command
   key:
   - builtins:pyobj_creg.service
-  - legacy_type.ui:global_model_command
+  - legacy_type.ui:model_command
   value: model_command_from_piece
 definitions:
   model_command.module:
@@ -22,8 +22,8 @@ definitions:
     module_name: model_command
     file_name: model_command.dyn.py
     import_list:
-      htypes.ui.global_model_command: legacy_type.ui:global_model_command
       htypes.ui.global_model_command_d: legacy_type.ui:global_model_command_d
+      htypes.ui.model_command: legacy_type.ui:model_command
       services.association_reg: builtins:association_reg.service
       services.data_to_res: resource.data_to_res:data_to_res.service
       services.pyobj_creg: builtins:pyobj_creg.service
