--- a/hyperapp/ui/sample_commands.resources.yaml
+++ b/hyperapp/ui/sample_commands.resources.yaml
@@ -5,8 +5,8 @@ import:
 - legacy_type.builtin:call
 - legacy_type.builtin:python_module
 - legacy_type.sample_list:item
-- legacy_type.ui:global_model_command
 - legacy_type.ui:global_model_command_d
+- legacy_type.ui:model_command
 associations:
 - bases:
   - global_model_command_d
@@ -20,6 +20,10 @@ associations:
   - global_model_command_d
   key: global_model_command_d
   value: open_sample_static_text_2.command
+- bases:
+  - global_model_command_d
+  key: global_model_command_d
+  value: show_state.command
 definitions:
   global_model_command_d:
     _type: legacy_type.builtin:call
@@ -29,25 +33,37 @@ definitions:
     object: sample_commands.module
     attr_name: open_sample_static_list
   open_sample_static_list.command:
-    _type: legacy_type.ui:global_model_command
+    _type: legacy_type.ui:model_command
     function: open_sample_static_list
+    params: []
   open_sample_static_text_1:
     _type: legacy_type.builtin:attribute
     object: sample_commands.module
     attr_name: open_sample_static_text_1
   open_sample_static_text_1.command:
-    _type: legacy_type.ui:global_model_command
+    _type: legacy_type.ui:model_command
     function: open_sample_static_text_1
+    params: []
   open_sample_static_text_2:
     _type: legacy_type.builtin:attribute
     object: sample_commands.module
     attr_name: open_sample_static_text_2
   open_sample_static_text_2.command:
-    _type: legacy_type.ui:global_model_command
+    _type: legacy_type.ui:model_command
     function: open_sample_static_text_2
+    params: []
   sample_commands.module:
     _type: legacy_type.builtin:python_module
     module_name: sample_commands
     file_name: sample_commands.dyn.py
     import_list:
       htypes.sample_list.item: legacy_type.sample_list:item
+  show_state:
+    _type: legacy_type.builtin:attribute
+    object: sample_commands.module
+    attr_name: show_state
+  show_state.command:
+    _type: legacy_type.ui:model_command
+    function: show_state
+    params:
+    - state
