--- a/hyperapp/ui/qt/list.resources.yaml
+++ b/hyperapp/ui/qt/list.resources.yaml
@@ -1,6 +1,7 @@
 # Automatically generated file. Do not edit.
 
 import:
+- common.list_diff:list_diff.module
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.list:layout
@@ -32,4 +33,5 @@ definitions:
     module_name: list
     file_name: list.dyn.py
     import_list:
+      code.list_diff: common.list_diff:list_diff.module
       services.ui_adapter_creg: ui.ui_adapter_creg:ui_adapter_creg.service
