--- a/hyperapp/ui/qt/list_adapter.resources.yaml
+++ b/hyperapp/ui/qt/list_adapter.resources.yaml
@@ -5,6 +5,7 @@ import:
 - builtins:pyobj_creg.service
 - builtins:types.service
 - builtins:web.service
+- common.list_diff:list_diff.module
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.list_adapter:fn_list_adapter
@@ -47,6 +48,7 @@ definitions:
     module_name: list_adapter
     file_name: list_adapter.dyn.py
     import_list:
+      code.list_diff: common.list_diff:list_diff.module
       services.mosaic: builtins:mosaic.service
       services.pyobj_creg: builtins:pyobj_creg.service
       services.types: builtins:types.service
