--- a/hyperapp/ui/sample_list.resources.yaml
+++ b/hyperapp/ui/sample_list.resources.yaml
@@ -1,9 +1,11 @@
 # Automatically generated file. Do not edit.
 
 import:
+- common.list_diff:list_diff.module
 - legacy_type.builtin:attribute
 - legacy_type.builtin:call
 - legacy_type.builtin:python_module
+- legacy_type.sample_list:feed_sample_list
 - legacy_type.sample_list:item
 - legacy_type.sample_list:sample_list
 - legacy_type.ui:fn_impl
@@ -11,12 +13,29 @@ import:
 - legacy_type.ui:list_ui_t
 - legacy_type.ui:model
 - legacy_type.ui:model_command
+- legacy_type.ui:model_command_d
 - legacy_type.ui:model_d
 associations:
 - bases:
   - global_model_command_d
   key: global_model_command_d
+  value: open_feed_sample_fn_list.command
+- bases:
+  - global_model_command_d
+  key: global_model_command_d
   value: open_sample_fn_list.command
+- bases:
+  - legacy_type.sample_list:feed_sample_list
+  key:
+  - model_d
+  - legacy_type.sample_list:feed_sample_list
+  value: feed_sample_list.model
+- bases:
+  - legacy_type.sample_list:sample_list
+  key:
+  - model_command_d
+  - legacy_type.sample_list:sample_list
+  value: sample_list.command
 - bases:
   - legacy_type.sample_list:sample_list
   key:
@@ -24,12 +43,38 @@ associations:
   - legacy_type.sample_list:sample_list
   value: sample_list.model
 definitions:
+  feed_sample_list:
+    _type: legacy_type.builtin:attribute
+    object: sample_list.module
+    attr_name: feed_sample_list
+  feed_sample_list.impl:
+    _type: legacy_type.ui:fn_impl
+    function: feed_sample_list
+    want_feed: true
+  feed_sample_list.model:
+    _type: legacy_type.ui:model
+    ui_t: feed_sample_list.ui_t
+    impl: feed_sample_list.impl
+  feed_sample_list.ui_t:
+    _type: legacy_type.ui:list_ui_t
+    element_t: legacy_type.sample_list:item
   global_model_command_d:
     _type: legacy_type.builtin:call
     function: legacy_type.ui:global_model_command_d
+  model_command_d:
+    _type: legacy_type.builtin:call
+    function: legacy_type.ui:model_command_d
   model_d:
     _type: legacy_type.builtin:call
     function: legacy_type.ui:model_d
+  open_feed_sample_fn_list:
+    _type: legacy_type.builtin:attribute
+    object: sample_list.module
+    attr_name: open_feed_sample_fn_list
+  open_feed_sample_fn_list.command:
+    _type: legacy_type.ui:model_command
+    function: open_feed_sample_fn_list
+    params: []
   open_sample_fn_list:
     _type: legacy_type.builtin:attribute
     object: sample_list.module
@@ -42,9 +87,15 @@ definitions:
     _type: legacy_type.builtin:attribute
     object: sample_list.module
     attr_name: sample_list
+  sample_list.command:
+    _type: legacy_type.ui:model_command
+    function: sample_list
+    params:
+    - piece
   sample_list.impl:
     _type: legacy_type.ui:fn_impl
     function: sample_list
+    want_feed: false
   sample_list.model:
     _type: legacy_type.ui:model
     ui_t: sample_list.ui_t
@@ -54,6 +105,8 @@ definitions:
     module_name: sample_list
     file_name: sample_list.dyn.py
     import_list:
+      code.list_diff: common.list_diff:list_diff.module
+      htypes.sample_list.feed_sample_list: legacy_type.sample_list:feed_sample_list
       htypes.sample_list.item: legacy_type.sample_list:item
       htypes.sample_list.sample_list: legacy_type.sample_list:sample_list
   sample_list.ui_t:
