--- a/hyperapp/ui/sample_list.tests.resources.yaml
+++ b/hyperapp/ui/sample_list.tests.resources.yaml
@@ -1,6 +1,7 @@
 # Automatically generated file. Do not edit.
 
 import:
+- common.list_diff:list_diff.module
 - legacy_type.builtin:python_module
 - legacy_type.phony:phony
 associations: []
@@ -12,4 +13,5 @@ definitions:
     module_name: sample_list.tests
     file_name: sample_list.tests.dyn.py
     import_list:
+      code.list_diff: common.list_diff:list_diff.module
       tested.code.sample_list: phony
