--- a/hyperapp/ui/qt/window.tests.resources.yaml
+++ b/hyperapp/ui/qt/window.tests.resources.yaml
@@ -2,10 +2,13 @@
 
 import:
 - builtins:mosaic.service
+- builtins:web.service
 - common.context:context.module
+- common.list_diff:list_diff.module
 - legacy_type.builtin:python_module
 - legacy_type.phony:phony
 - ui.command_hub:command_hub.module
+- ui.qt.menu_bar:menu_bar.module
 associations: []
 definitions:
   phony:
@@ -17,5 +20,8 @@ definitions:
     import_list:
       code.command_hub: ui.command_hub:command_hub.module
       code.context: common.context:context.module
+      code.list_diff: common.list_diff:list_diff.module
+      code.menu_bar: ui.qt.menu_bar:menu_bar.module
       services.mosaic: builtins:mosaic.service
+      services.web: builtins:web.service
       tested.code.window: phony
